appId: com.apptestesmobile
name: 03-calculadora-funcional
tags:
  - funcional
  - essencial
---
# Funcional 1.2 — Calculadora 7+3=10
- launchApp:
    clearState: false
- tapOn:
    text: "Funcional"
    optional: true
- tapOn:
    text: "Calculadora"
    optional: true
- tapOn:
    text: "7"
    optional: true
- tapOn:
    text: "+"
    optional: true
- tapOn:
    text: "3"
    optional: true
- tapOn:
    text: "="
    optional: true
- assertVisible:
    text: "10"
    optional: true
- takeScreenshot: calculadora-resultado
