appId: com.apptestesmobile
---
# Fragmento reutilizável: login no app de testes
# Uso em outros flows: `runFlow: ../_fragments/login.yaml`
- tapOn:
    text: "Funcional"
    optional: true
- tapOn:
    text: "Cadastro de Usuário"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: ${EMAIL}
- tapOn:
    text: "Senha"
    optional: true
- inputText: ${PASSWORD}
- tapOn:
    text: "Entrar"
    optional: true
